--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,11 @@ body {
 
 header {
     grid-area: hd;
-    background-color: aqua;
-    height: 12vh;
+    height: 30vh;
+    width: 20vw;
+    margin-left: 0%;
     margin-bottom: 0%;
     font-family: 'Orbitron', sans-serif;
-    text-align: left;
-    color: #FFFFFF;
     background-color: #414963;
 }
 
@@ -40,10 +39,11 @@ main {
 
 footer {
     grid-area: ft;
-    background-color: antiquewhite;
     font-family: 'Orbitron', sans-serif;
     color: #FFFFFF;
     background-color: #414963;
+    width: 20vw;
+    margin-right: 0%;
 }
 
 #playing-field {
@@ -51,7 +51,7 @@ footer {
     color: #FFFFFF;
     background-color: #000000;
     margin-top: 7vh;
-    margin-left: 8vw;
+    margin-left: 5vw;
     margin-bottom: 30px;
     height: 85vh;
     width: 120vh;
@@ -63,18 +63,43 @@ footer {
 
 }
 
-.choices {
+.choices-red, .choices-blue {
     display: inline-block;
     margin-top: 25vh;
     text-align: center;
-    width: 10vh;
-    margin-left: 10vh;
-    margin-left: 10vh;
+    margin-right: 5%;
+
+}
+
+h1 {
+    text-align: left;
+    font-size: 3.4vh;
+    color: #FFFFFF;
+    margin-top: 7vh;
+    padding-top: 0%;
 }
 
 h2 {
+    font-size: 3.2vh;
     margin-top: 5vh;
     text-align: center;
+}
+
+h3 {
+    color: #FFFFFF;
+    font-size: 2.6vh;
+}
+
+h4 {
+    font-size: 2.8vh;
+}
+
+p {
+    font-size: 2.3vh;
+}
+
+a {
+    text-decoration: none;
 }
 
 #comp-point {
@@ -89,7 +114,21 @@ h2 {
     margin-top: 5vh;
 }
 
-h1 {
-    margin-top: 7vh;
-    padding-top: 0%;
+#choice-wrapper {
+    margin-left: 10vh;
+    margin-right: 10vh;
+}
+
+.choices-red {
+    width: 14%;
+    height: 8%;
+    background-color: #ab1010;
+    border-radius: 10%;
+}
+
+.choices-blue {
+    width: 13%;
+    height: 8%;
+    background-color: #2636c5;
+    border-radius: 10%;
 }
