--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ footer {
     margin-left: 5vw;
     margin-bottom: 30px;
     height: 85vh;
-    width: 120vh;
+    width: 65vw;
     border-radius: 7%;
     border: lightblue;
     border-width: 5px;
@@ -127,8 +127,106 @@ a {
 }
 
 .choices-blue {
-    width: 13%;
+    width: 14%;
     height: 8%;
     background-color: #2636c5;
     border-radius: 10%;
+}
+
+@media screen and (max-width: 1300px) {
+    h1 {
+        font-size: 3vh;
+    }
+    h2 {
+        font-size: 2.6vh
+    }
+    h3 {
+        font-size: 2.2vh;
+    }
+    h4 {
+        font-size: 2vh;
+    }
+    p {
+        font-size: 2vh;
+    }
+
+    .choices-blue , .choices-red {
+        width: 18%;
+        height: 10%;
+        margin-top: 10vh;
+    }
+}
+
+@media screen and (max-width: 6000px) {
+    .grid-container{
+        display: grid;
+        height: 98vh;
+        width: 100vw;
+        margin: auto;
+        gap: 0px;
+        grid-template-columns: 20fr 20fr;
+        grid-template-rows: 20%;
+        grid-template-areas:
+        'hd hd'
+        'm m'
+        'ft ft'
+    }
+
+    header {
+        margin-top: 1vh;
+        width: 100vw;
+        height: 10vh;
+    }
+
+    main {
+        margin-top: -10vh;
+    }
+
+    footer {
+        width: 100vw;
+    }
+
+    h1 {
+        font-size: 2vh;
+        text-align: center;
+        margin-top: 2vh;
+    }
+    h2 {
+        font-size: 2.6vh
+    }
+    h3 {
+        font-size: 1.8vh;
+    }
+    h4 {
+        font-size: 2vh;
+    }
+
+    p {
+        font-size: 1.5vh;
+    }
+
+    #comp-point, #you-point {
+        margin-left: 3vw;
+    }
+    #point-count {
+        margin-top: 1vh;
+    }
+    #playing-field {
+        margin-top: 0%;
+        width: 80vw;
+        height: 60vh;
+        margin-left: 10vw;
+    }
+
+    #choice-wrapper {
+        margin-left: 3vw;
+        margin-right: 3vw
+    }
+
+    .choices-blue , .choices-red {
+        width: 27%;
+        height: 8%;
+        margin-top: 2vh;
+    }
+
 }
