--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,7 @@ a {
         font-size: 2.6vh
     }
     h3 {
+        font-family: 'Orbitron', sans-serif;
         font-size: 2.2vh;
     }
     h4 {
