changed links to buttons, added "start game"
Changed the links for point chooser to buttons instead and added a start game link. Shis way you choose and then you klick the link to start the game.

--- a/assets/css/style_start.css
+++ b/assets/css/style_start.css
@@ -28,8 +28,15 @@ h2 {
     margin-top: 5vh;
 }
 
-.game-link {
+button {
+    justify-items: center;
     text-align: center;
-    font-size: 3vh;
+    font-size: 4vh;
     color: #FFFFFF;
+    background-color: #000000;
+    border-style: hidden;
+    font-family: 'Orbitron', sans-serif;
 }
+
+
+
