--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,8 @@ h2 {
 
 h3 {
     color: #FFFFFF;
-    font-size: 2.6vh;
+    font-size: 3vh;
+    text-align: center;
 }
 
 h4 {
@@ -124,6 +125,7 @@ a {
     height: 8%;
     background-color: #ab1010;
     border-radius: 10%;
+    border-style: hidden;
 }
 
 .choices-blue {
@@ -131,6 +133,28 @@ a {
     height: 8%;
     background-color: #2636c5;
     border-radius: 10%;
+    border-style: hidden;
+}
+
+.choices-blue:hover , .choices-red:hover {
+        cursor: pointer;
+    }
+
+#choose-again {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 3vh;
+    color: #FFFFFF;
+    height: 12%;
+    padding-left: 2%;
+    padding-right: 2%;
+    background-color: #2636c5;
+    border-radius: 12%;
+    border-style: none;
+    text-align: center;
+}
+
+#choose-again:hover {
+    cursor: pointer;
 }
 
 @media screen and (max-width: 1300px) {
@@ -154,8 +178,9 @@ a {
     .choices-blue , .choices-red {
         width: 18%;
         height: 10%;
-        margin-top: 10vh;
+        margin-top: 6vh;
     }
+    
 }
 
 @media screen and (max-width: 600px) {
