made playGame work
Made playGame work, made it simpler, made it anounce the result to the user.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,11 @@ a {
         cursor: pointer;
     }
 
+#who-won {
+    text-align: center;
+    color: #FFFFFF;
+}
+
 #choose-again {
     font-family: 'Orbitron', sans-serif;
     font-size: 3vh;
