function - is game done?
Made a function that checks if the game is done and who wins. Triggered when you click continue button.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ a {
     color: #FFFFFF;
 }
 
-#choose-again {
+#continue {
     font-family: 'Orbitron', sans-serif;
     font-size: 3vh;
     color: #FFFFFF;
@@ -156,9 +156,10 @@ a {
     border-radius: 12%;
     border-style: none;
     text-align: center;
+    margin-left: 40%;
 }
 
-#choose-again:hover {
+#continue:hover {
     cursor: pointer;
 }
 
