made a div for pointchoices
made a div for point choices in order to make the variables work. Started work on getting it to perform as needed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,21 @@ a {
     cursor: pointer;
 }
 
+#choice-point-display {
+    position: fixed;
+    z-index: 3;
+    background-color: #000000;
+    top: 20%;
+    margin-left: 15vw;
+    width: fit-content;
+    height: 60vh;
+    border-radius: 10%;
+    border-style: solid;
+    border-width: 5px;
+}
+
+
+
 @media screen and (max-width: 1300px) {
     h1 {
         font-size: 3vh;
