--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ a {
     border-style: hidden;
 }
 
-.choices-blue:hover , .choices-red:hover {
+button:hover {
         cursor: pointer;
     }
 
@@ -145,7 +145,7 @@ a {
     color: #FFFFFF;
 }
 
-#continue {
+#continue, #continue-to-game {
     font-family: 'Orbitron', sans-serif;
     font-size: 3vh;
     color: #FFFFFF;
@@ -156,25 +156,40 @@ a {
     border-radius: 12%;
     border-style: none;
     text-align: center;
-    margin-left: 40%;
-}
-
-#continue:hover {
-    cursor: pointer;
+    margin-left: 20vw;
 }
 
 #choice-point-display {
     position: fixed;
     z-index: 3;
     background-color: #000000;
-    top: 20%;
-    margin-left: 15vw;
-    width: fit-content;
-    height: 60vh;
-    border-radius: 10%;
+    top: 7vh;
+    margin-left: 5vw;
+    width: 65vw;
+    height: 85vh;
+    border-radius: 7%;
     border-style: solid;
     border-width: 5px;
+    border-color: lightblue;
 }
+
+.point-button {
+    text-align: center;
+    font-size: 3vh;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 2%;
+    padding-right: 2%;
+    color: #FFFFFF;
+    border-style: hidden;
+    font-family: 'Orbitron', sans-serif;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20%;
+    background-color: #ab1010;
+    border-radius: 10%;
+}
+
 
 
 
