--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ body {
     background-color: #414963;
 }
 
+#body-start {
+    background-color: #000000;
+}
+
 header {
     grid-area: hd;
     height: 30vh;
@@ -27,6 +31,16 @@ header {
     margin-bottom: 0%;
     font-family: 'Orbitron', sans-serif;
     background-color: #414963;
+}
+
+#h-start {
+    width: 100vw;
+    height: 20vh;
+    background-color: #000000;
+}
+
+#m-start {
+    background-color: #000000;
 }
 
 main {
@@ -82,6 +96,7 @@ h1 {
 h2 {
     font-size: 3.2vh;
     margin-top: 5vh;
+    font-family: 'Orbitron', sans-serif;
     text-align: center;
 }
 
@@ -111,6 +126,22 @@ li {
 
 a {
     text-decoration: none;
+    color: #FFFFFF;
+}
+
+.start-page {
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+#play-game {
+    padding-right: 5px;
+    padding-left: 5px;
+    height: 20%;
+    background-color: #ab1010;
+    border-radius: 10%;
+    border-style: hidden;
 }
 
 #comp-point {
