--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,7 @@ button:hover {
     border-radius: 7%;
     border-style: solid;
     border-width: 5px;
-    border-color: lightblue;
+    border-color: #add8e6;
 }
 
 .point-button {
