--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,9 +240,6 @@ button:hover {
     border-color: lightblue;
 }
 
-
-
-
 @media screen and (max-width: 1300px) {
     h1 {
         font-size: 3vh;
@@ -261,15 +258,26 @@ button:hover {
         font-size: 2vh;
     }
 
+    ul {
+        margin-bottom: 0;
+    }
+    li {
+        font-size: 1.8vh;
+    }
+
     .choices-blue , .choices-red {
         width: 18%;
         height: 10%;
         margin-top: 6vh;
     }
+
+    img {
+        visibility: hidden;
+    }
     
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 820px) {
     .grid-container{
         display: grid;
         height: 98vh;
@@ -296,6 +304,8 @@ button:hover {
 
     footer {
         width: 100vw;
+        z-index: 5;
+        
     }
 
     h1 {
@@ -316,6 +326,8 @@ button:hover {
     p {
         font-size: 1.5vh;
     }
+    
+    
 
     #comp-point, #you-point {
         margin-left: 3vw;
@@ -330,6 +342,13 @@ button:hover {
         margin-left: 10vw;
     }
 
+    #choice-point-display, #result-game-display {
+        margin-top: 2.5vh;
+        width: 80vw;
+        height: 60vh;
+        margin-left: 10vw;
+    }
+
     #choice-wrapper {
         margin-left: 3vw;
         margin-right: 3vw
@@ -339,6 +358,9 @@ button:hover {
         width: 27%;
         height: 8%;
         margin-top: 2vh;
+    }
+    img {
+        visibility: visible;
     }
 
 }
