--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,15 @@ a {
     color: #FFFFFF;
 }
 
+#who-won-game {
+    font-size: 5vh;
+}
+
+#creator {
+    margin-top: 7vh;
+    text-align: center;
+}
+
 .start-page {
     text-align: center;
     margin-left: 20%;
@@ -181,7 +190,7 @@ button:hover {
     color: #FFFFFF;
 }
 
-#continue, #continue-to-game, #newGame {
+#continue, #continue-to-game, #new-game {
     font-family: 'Orbitron', sans-serif;
     font-size: 3vh;
     color: #FFFFFF;
@@ -240,10 +249,6 @@ button:hover {
     border-color: lightblue;
 }
 
-img {
-    visibility: hidden;
-}
-
 @media screen and (max-width: 1300px) {
     h1 {
         font-size: 3vh;
@@ -300,16 +305,16 @@ img {
 
     main {
         margin-top: -10vh;
+        height: 60vh;
     }
 
     footer {
         width: 100vw;
-        z-index: 5;
         
     }
 
     h1 {
-        font-size: 2vh;
+        font-size: 2.1vh;
         text-align: center;
         margin-top: 2vh;
     }
@@ -321,12 +326,18 @@ img {
     }
     h4 {
         font-size: 2vh;
+        margin-bottom: 0%;
+        margin-left: 5vw;
     }
-
     p {
-        font-size: 1.5vh;
+        font-size: 1.7vh;
     }
-    
+    ul {
+        margin-left: 5vw;
+    }
+    li {
+        font-size: 2.9vw;
+    }
     
 
     #comp-point, #you-point {
@@ -360,18 +371,17 @@ img {
         margin-top: 2vh;
     }
 
-    #rules-wrapper {
-        z-index: 5;
+    .list-block {
+        display: inline-block;
     }
-    #up-arrow {
-        visibility: visible;
-        position: fixed;
-        height: 40px;
-        margin-top: 3%;
-        margin-left: 80%;
-        padding-left: 4px;
-        padding-right: 4px;
-        background-color: #FFFFFF;
-        border-radius: 50%;
+
+    .point-button {
+        font-size: 2vh;
+        margin-bottom: 2vh;
+    }
+
+    #continue-to-game, #new-game, #continue {
+        font-size: 2.5vh;
+        margin-top: 4vh;
     }
 }
