--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@ footer {
     background-color: #414963;
     width: 20vw;
     margin-right: 0%;
+    z-index: -2;
 }
 
 #playing-field {
@@ -171,13 +172,16 @@ a {
 }
 
 .choices-red {
-    padding-right: 5px;
-    padding-left: 5px;
-    height: 8%;
+    font-size: 3vh;
+    padding-right: 2%;
+    padding-left: 2%;
+    padding-top: 12px;
+    padding-bottom: 12px;
     background-color: #ab1010;
     border-radius: 10%;
     border-style: hidden;
     font-family: 'Orbitron', sans-serif;
+    color: #FFFFFF;
 }
 
 
@@ -249,40 +253,7 @@ button:hover {
     border-color: lightblue;
 }
 
-@media screen and (max-width: 1300px) {
-    h1 {
-        font-size: 3vh;
-    }
-    h2 {
-        font-size: 2.6vh
-    }
-    h3 {
-        font-family: 'Orbitron', sans-serif;
-        font-size: 2.2vh;
-    }
-    h4 {
-        font-size: 2vh;
-    }
-    p {
-        font-size: 2vh;
-    }
-
-    ul {
-        margin-bottom: 0;
-    }
-    li {
-        font-size: 1.8vh;
-    }
-
-    .choices-blue , .choices-red {
-        width: 18%;
-        height: 10%;
-        margin-top: 6vh;
-    }
-    
-}
-
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1000px) {
     .grid-container{
         display: grid;
         height: 98vh;
@@ -365,12 +336,6 @@ button:hover {
         margin-right: 3vw
     }
 
-    .choices-blue , .choices-red {
-        width: 27%;
-        height: 8%;
-        margin-top: 2vh;
-    }
-
     .list-block {
         display: inline-block;
     }
@@ -379,9 +344,25 @@ button:hover {
         font-size: 2vh;
         margin-bottom: 2vh;
     }
+    .choices-red {
+        font-size: 2vh;
+        margin-top: 2vh;
+    }
 
     #continue-to-game, #new-game, #continue {
         font-size: 2.5vh;
         margin-top: 4vh;
+    }
+
+    @media screen and (min-width: 700px) {
+        h1 {
+            font-size: 4vh;
+        }
+        h4 {
+            font-size: 2.1vh;
+        }
+        li {
+            font-size: 2vw;
+        }
     }
 }
