--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/*Specifications grid container*/
 .grid-container {
     display: grid;
     height: 98vh;
@@ -12,17 +13,13 @@
     'm m ft'
 }
 
+/*CSS grid*/
 body {
     overflow-x: hidden;
     overflow-y: hidden;
     margin: 0;
     background-color: #414963;
 }
-
-#body-start {
-    background-color: #000000;
-}
-
 header {
     grid-area: hd;
     height: 20vh;
@@ -32,25 +29,12 @@ header {
     font-family: 'Orbitron', sans-serif;
     background-color: #414963;
 }
-
-#h-start {
-    width: 100vw;
-    height: 20vh;
-    background-color: #000000;
-}
-
-#m-start {
-    background-color: #000000;
-}
-
 main {
     grid-area: m;
     font-family: 'Orbitron', sans-serif;
     color: #FFFFFF;
     background-color: #414963;
 }
-    
-
 footer {
     grid-area: ft;
     font-family: 'Orbitron', sans-serif;
@@ -61,6 +45,65 @@ footer {
     z-index: -2;
 }
 
+/*CSS starting/instruction page*/
+#body-start {
+    background-color: #000000;
+}
+#h-start {
+    width: 100vw;
+    height: 20vh;
+    background-color: #000000;
+}
+
+#m-start {
+    background-color: #000000;
+}
+.start-page {
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+/*general CSS - content tags*/
+h1 {
+    text-align: left;
+    font-size: 3.4vh;
+    color: #FFFFFF;
+    margin-top: 7vh;
+    padding-top: 0%;
+}
+h2 {
+    font-size: 3.2vh;
+    margin-top: 5vh;
+    font-family: 'Orbitron', sans-serif;
+    text-align: center;
+}
+h3 {
+    color: #FFFFFF;
+    font-size: 3vh;
+    text-align: center;
+}
+h4 {
+    font-size: 2.8vh;
+}
+p {
+    font-size: 2.3vh;
+    margin-left: 10vh;
+}
+ul {
+    font-size: 2.3vh;
+    padding-left: 0;
+    margin-left: 10%;
+}
+li {
+    padding-bottom: 6%;
+}
+a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+/*CSS game windows*/
 #playing-field {
     font-family: 'Orbitron', sans-serif;
     color: #FFFFFF;
@@ -75,133 +118,7 @@ footer {
     border-width: 5px;
     border-style: solid;
     z-index: 1;
-
 }
-
-.choices-red {
-    display: inline-block;
-    margin-top: 5vh;
-    text-align: center;
-    margin-right: 5%;
-
-}
-
-h1 {
-    text-align: left;
-    font-size: 3.4vh;
-    color: #FFFFFF;
-    margin-top: 7vh;
-    padding-top: 0%;
-}
-
-h2 {
-    font-size: 3.2vh;
-    margin-top: 5vh;
-    font-family: 'Orbitron', sans-serif;
-    text-align: center;
-}
-
-h3 {
-    color: #FFFFFF;
-    font-size: 3vh;
-    text-align: center;
-}
-
-h4 {
-    font-size: 2.8vh;
-}
-
-p {
-    font-size: 2.3vh;
-    margin-left: 10vh;
-}
-
-ul {
-    font-size: 2.3vh;
-    padding-left: 0;
-    margin-left: 10%;
-}
-li {
-    padding-bottom: 6%;
-}
-
-
-a {
-    text-decoration: none;
-    color: #FFFFFF;
-}
-
-#who-won-game {
-    font-size: 5vh;
-}
-
-#creator {
-    margin-top: 7vh;
-    text-align: center;
-}
-
-.start-page {
-    text-align: center;
-    margin-left: 20%;
-    margin-right: 20%;
-}
-
-#play-game {
-    padding-right: 5px;
-    padding-left: 5px;
-    height: 20%;
-    background-color: #ab1010;
-    border-radius: 10%;
-    border-style: hidden;
-}
-
-#point-count {
-    margin-top: 5vh;
-}
-
-#choice-wrapper, #choice-point-wrapper {
-    margin-left: 10vh;
-    margin-right: 10vh;
-}
-
-.choices-red {
-    font-size: 3vh;
-    padding-right: 2%;
-    padding-left: 2%;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    background-color: #ab1010;
-    border-radius: 10%;
-    border-style: hidden;
-    font-family: 'Orbitron', sans-serif;
-    color: #FFFFFF;
-}
-
-
-button:hover {
-        cursor: pointer;
-    }
-
-#who-won {
-    text-align: center;
-    color: #FFFFFF;
-    margin-left: 0%;
-}
-
-#continue, #continue-to-game, #new-game {
-    font-family: 'Orbitron', sans-serif;
-    font-size: 3vh;
-    color: #FFFFFF;
-    height: 12%;
-    padding-left: 2%;
-    padding-right: 2%;
-    background-color: #2636c5;
-    border-radius: 12%;
-    border-style: none;
-    text-align: center;
-    margin-left: 20vw;
-}
-
 #choice-point-display {
     position: fixed;
     z-index: 3;
@@ -215,7 +132,37 @@ button:hover {
     border-width: 5px;
     border-color: #add8e6;
 }
+#result-game-display {
+    position: fixed;
+    z-index: -3;
+    background-color: #000000;
+    top: 7vh;
+    margin-left: 5vw;
+    width: 65vw;
+    height: 85vh;
+    border-radius: 7%;
+    border-style: solid;
+    border-width: 5px;
+    border-color: lightblue;
+}
 
+/*CSS game window content - buttons*/
+.choices-red {
+    display: inline-block;
+    margin-top: 5vh;
+    text-align: center;
+    margin-right: 5%;
+    font-size: 3vh;
+    padding-right: 2%;
+    padding-left: 2%;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: #ab1010;
+    border-radius: 10%;
+    border-style: hidden;
+    font-family: 'Orbitron', sans-serif;
+    color: #FFFFFF;
+}
 .point-button {
     text-align: center;
     font-size: 3vh;
@@ -231,23 +178,55 @@ button:hover {
     background-color: #ab1010;
     border-radius: 10%;
 }
-
-
-#result-game-display {
-    position: fixed;
-    z-index: -3;
-    background-color: #000000;
-    top: 7vh;
-    margin-left: 5vw;
-    width: 65vw;
-    height: 85vh;
-    border-radius: 7%;
-    border-style: solid;
-    border-width: 5px;
-    border-color: lightblue;
+#continue, #continue-to-game, #new-game {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 3vh;
+    color: #FFFFFF;
+    height: 12%;
+    padding-left: 2%;
+    padding-right: 2%;
+    background-color: #2636c5;
+    border-radius: 12%;
+    border-style: none;
+    text-align: center;
+    margin-left: 20vw;
+}
+#play-game {
+    padding-right: 5px;
+    padding-left: 5px;
+    height: 20%;
+    background-color: #ab1010;
+    border-radius: 10%;
+    border-style: hidden;
+}
+button:hover {
+    cursor: pointer;
+}
+#choice-wrapper, #choice-point-wrapper {
+    margin-left: 10vh;
+    margin-right: 10vh;
 }
 
+/*CSS game window content - info to user*/
+#point-count {
+    margin-top: 5vh;
+}
+#who-won {
+    text-align: center;
+    color: #FFFFFF;
+    margin-left: 0%;
+}
+#who-won-game {
+    font-size: 5vh;
+}
+#creator {
+    margin-top: 7vh;
+    text-align: center;
+}
+
+/*CSS for both mobile and ipad*/
 @media screen and (max-width: 1000px) {
+    /*Specifcations grid container*/
     .grid-container{
         display: grid;
         height: 98vh;
@@ -262,6 +241,7 @@ button:hover {
         'ft ft'
     }
 
+    /*CSS grid*/
     header {
         margin-top: 1vh;
         width: 100vw;
@@ -278,6 +258,7 @@ button:hover {
         
     }
 
+    /*general CSS - content tags*/
     h1 {
         font-size: 2.1vh;
         text-align: center;
@@ -297,6 +278,7 @@ button:hover {
     }
     p {
         font-size: 1.7vh;
+        margin-left: 3vw;
     }
     ul {
         margin-left: 5vw;
@@ -305,13 +287,7 @@ button:hover {
         font-size: 2.5vw;
     }
     
-
-    #comp-point, #you-point {
-        margin-left: 3vw;
-    }
-    #point-count {
-        margin-top: 1vh;
-    }
+    /*CSS for the game windows*/
     #playing-field {
         margin-top: 0%;
         width: 85vw;
@@ -326,15 +302,14 @@ button:hover {
         margin-left: 7vw;
     }
 
+    /*CSS game window + footer content*/
     #choice-wrapper, #choice-point-wrapper {
         margin-left: 3vw;
         margin-right: 3vw
     }
-
     .list-block {
         display: inline-block;
     }
-
     .point-button {
         font-size: 2vh;
         margin-bottom: 1vh;
@@ -343,28 +318,33 @@ button:hover {
         font-size: 2vh;
         margin-top: 1vh;
     }
-
     #continue-to-game, #new-game, #continue {
         font-size: 2.5vh;
         margin-top: 2vh;
     }
+    #point-count {
+        margin-top: 1vh;
+    }
 
+    /*CSS for maikng it look good on ipad*/
     @media screen and (min-width: 700px) {
+        /*grid CSS*/
+        main {
+            height: 55vh;
+        }
+
+        /*Content CSS*/
         h1 {
             font-size: 3.5vh;
         }
         h3 {
-            font-size: 2.8vh;
+            font-size: 2.3vh;
         }
         h4 {
             font-size: 2.1vh;
         }
         li {
             font-size: 2vw;
-        }
-
-        main {
-            height: 55vh;
         }
     }
 }
