--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ footer {
 
 #m-start {
     background-color: #000000;
+    height: 80vh;
 }
 .start-page {
     text-align: center;
@@ -189,15 +190,19 @@ a {
     border-radius: 12%;
     border-style: none;
     text-align: center;
-    margin-left: 20vw;
+    margin-left: 29vw;
 }
 #play-game {
-    padding-right: 5px;
-    padding-left: 5px;
-    height: 20%;
+    position: fixed;
+    padding-right: 2%;
+    padding-left: 2%;
+    padding-bottom: 2%;
+    padding-top: 2%;
     background-color: #ab1010;
     border-radius: 10%;
     border-style: hidden;
+    bottom: 20vh;
+    margin-left: 46%;
 }
 button:hover {
     cursor: pointer;
@@ -323,6 +328,9 @@ button:hover {
         font-size: 2.5vh;
         margin-top: 2vh;
     }
+    #play-game {
+        margin-left: 36%;
+    }
     #point-count {
         margin-top: 1vh;
     }
@@ -346,6 +354,9 @@ button:hover {
         }
         li {
             font-size: 2vw;
+        }
+        #play-game {
+            margin-left: 44%;
         }
     }
 }
